Fixed button spacing on small screens

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -191,7 +191,7 @@ footer{
         max-width: 100%;
     }
     .button{
-        margin: 5px;
+        margin-bottom: 5px;
         width: 100%;
     }
 }
